fix img link in intro post and hide menu on mobile

--- a/themes/slim/static/css/slim.css
+++ b/themes/slim/static/css/slim.css
@@ -178,6 +178,13 @@ button,
   .site-title a {
     color: #333; }
 
+@media (max-width: 600px) {
+  .nav-btn {
+    visibility: hidden;
+    display: block !important;
+  }
+}
+
 .nav {
   position: absolute;
   top: 0;
@@ -256,8 +263,8 @@ button,
   display: block;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 0;
-  padding-right: 0; }
+  padding-left: 1rem;
+  padding-right: 1rem; }
   .container:before, .container:after {
     content: '';
     display: table; }
